[tool.poetry]
name = "parasite"
version = "0.1.8"
description = "Data validation for Python 3"
authors = ["Hendrik Boeck <hendrikboeck.dev@protonmail.com>"]
packages = [{ include = "*", from = "src" }]
readme = "README.md"
license = "MIT"
homepage = "https://hendrikboeck.github.io/parasite"
repository = "https://github.com/hendrikboeck/parasite"
documentation = "https://hendrikboeck.github.io/parasite"
keywords = [
    "data",
    "validation",
    "python",
    "zod",
    "datastructures",
    "types",
    "objects",
    "schema",
    "runtime-evaluation",
]
classifiers = [
    "Typing :: Typed",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
rusttypes = "^0.1.0"
tracing-py3 = "^0.1.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
pylint = "^3.1.0"
pytype = "^2024.4.11"
pytest = "^8.2.0"
sphinx = "^7.3.7"
qiskit-sphinx-theme = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytype]
inputs = ["src/parasite"]
disable = []

[tool.pylint.'MESSAGES CONTROL']
fail-under = 9.0
disable = "C,R,W1401"

[tool.yapf]
based_on_style = "google"
column_limit = 100
indent_width = 4
dedent_closing_brackets = true
coalesce_brackets = true
blank_line_before_nested_class_or_def = true
indent_dictionary_value = true
spaces_around_default_or_named_assign = true
spaces_before_comment = 3
split_all_top_level_comma_separated_values = false
split_before_dict_set_generator = true
split_before_dot = true
split_complex_comprehension = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]
